Remove commons libs